--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,7 +4,7 @@
 @import "~bootstrap/scss/mixins";
 
 // Customize Bootstrap Variables
-@import "./variables";
+@import "./variables.scss";
 
 // Import custom font from Google
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap&subset=cyrillic");
