--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,7 +1,7 @@
 $fa-font-path: "~font-awesome/fonts";
 
-$body-bg: #f1d9f0;;
-$footer-bg: #2c2c2c;
+$body-bg: #dfd1de;;
+$footer-bg: #000000;
 
 $theme-colors: (
   "primary": #6a89fd,
